--- a/style.css
+++ b/style.css
@@ -4,40 +4,40 @@
     margin: 0;
     font-family: Poppins, sans-serif;
     text-decoration: none;
-  }
-  
-  body {
+}
+
+body {
     overflow-x: hidden;
-  }
-  
-  .hero-header {
+}
+
+.hero-header {
     width: 100%;
     height: 100%;
     min-height: 100vh;
     background: #222;
-  }
-  
-  .wrapper {
+}
+
+.wrapper {
     width: 1280px;
     max-width: 95%;
     margin: 0 auto;
     padding: 0 20px;
-  }
-  
-  header {
+}
+
+header {
     padding: 40px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .logo {
+}
+
+.logo {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .logo i {
+}
+
+.logo i {
     height: 45px;
     width: 45px;
     background-color: #007ced;
@@ -49,15 +49,15 @@
     margin-right: 5px;
     cursor: pointer;
     text-align: center;
-  }
-  
-  .logo-text {
+}
+
+.logo-text {
     font-size: 24px;
     font-weight: 500;
     color: #fff;
-  }
-  
-  nav .togglebtn {
+}
+
+nav .togglebtn {
     width: 35px;
     height: 35px;
     position: absolute;
@@ -66,9 +66,9 @@
     z-index: 5;
     cursor: pointer;
     display: none;
-  }
-  
-  nav .togglebtn span {
+}
+
+nav .togglebtn span {
     display: block;
     background-color: #007ced;
     margin: 5px 0px;
@@ -76,72 +76,160 @@
     height: 3px;
     transition: 0.3s;
     transition-property: transform, opacity;
-  }
-  
-  nav .navlinks {
+}
+
+nav .navlinks {
     list-style-type: none;
-  }
-  
-  nav .navlinks li {
+}
+
+nav .navlinks li {
     display: inline-block;
-  }
-  
-  nav .navlinks li a {
+}
+
+nav .navlinks li a {
     color: #e5e5ee;
     margin-right: 2.5rem;
-  }
-  
-  .container {
+}
+
+.container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-top: 4rem;
-  }
-  
-  .container .hero-pic {
+}
+
+.container .hero-pic {
     width: 300px;
     height: 300px;
     border-radius: 50%;
     overflow: hidden;
     border: 15px solid #444;
     box-shadow: 5px 7px 25px rgba(0, 0, 0, 0.5);
-  }
-  
-  .container .hero-pic img {
+}
+
+.hero-pic img {
     height: 100%;
     width: 100%;
     transition: 0.5s;
-  }
-  
-  .container .hero-pic img:hover {
+}
+
+.hero-pic img:hover {
     transform: scale(1.2);
-  }
-  
-  .hero-text {
+}
+
+.hero-text {
     max-width: 500px;
     display: flex;
     flex-direction: column;
-  }
-  
-  .hero-text h4 {
+}
+
+.hero-text h4 {
     color: #e5e5ee;
     font-size: 14px;
-  }
-  
-  .hero-text h4 span {
+}
+
+.hero-text h4 span {
     color: #007ced;
     font-size: 16px;
-  }
-  
-  .hero-text h1 {
+}
+
+.hero-text h1 {
     color: #007ced;
     font-size: 3rem;
-  }
-  
-  .hero-text p {
+}
+
+.hero-text p {
     color: #e5e5ee;
-  }
-  
-  .btn-group.btn {
-    /* Add your button group styles here */
-  }
+}
+
+.btn-group {
+    margin: 45px 0;
+}
+
+.btn-group .btn {
+    border-color: #d5d5d5;
+    color: #fff;
+    background-color: #333;
+    padding: 12px 25px;
+    margin: 5px 0px;
+    margin-right: 7px;
+    border-radius: 30px;
+    border: 2px solid #e5e5e5;
+    box-shadow: 0 10px -8px rgba(0, 0, 0, 0.78);
+}
+
+.btn.active {
+    border-color: #007ced;
+}
+
+.hero-text .social i {
+    color: #e5e5e5;
+    font-size: 18px;
+    margin-right: 10px;
+    transition: 0.5s;
+}
+
+.hero-text .social i:hover {
+    color: #007ced;
+    transform: rotate(360deg);
+}
+
+@media (max-width: 930px) {
+    nav .togglebtn {
+        display: initial;
+    }
+
+    .click span {
+        position: absolute;
+        margin-top: 12px;
+    }
+
+    .click span:first-child {
+        transform: rotate(-40deg);
+    }
+
+    .click span:nth-child(2) {
+        opacity: 0;
+        margin: 0;
+    }
+
+    .click span:last-child {
+        transform: rotate(45deg);
+        top: 0;
+    }
+
+    nav .navlinks {
+        position: absolute;
+        top: 110px;
+        right: -100%;
+        bottom: 0;
+        width: 60%;
+        height: 100vh;
+        background-color: #222;
+        z-index: 3;
+        box-shadow: 5px 13px 30px rgba(0, 0, 0, 0.1);
+        transition: 0.5s;
+        padding: 25px 0px;
+    }
+
+    nav .navlinks li {
+        display: block;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+
+    nav .navlinks.open {
+        right: 0;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        padding-top: 2rem;
+    }
+}
+
+.hero-text {
+    padding: 40px 0px;
+}
